--- a/Etch-A-Sketch/index.html
+++ b/Etch-A-Sketch/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <header>
-      <h1 class="title">Etch-a-sketch</h1>
+      <span class="title">&nbsp;  Etch-a-sketch  &nbsp;</span>
     </header>
     <div id="main-container" class="container">
       <button id="reset-button" class="button">Change size</button>
